<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/containerLinearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.jkl.testscan.scan.presentation.view.ScanButton
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/scanButton"
            tools:layout_editor_absoluteX="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/withe"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@mipmap/ic_device_scan" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/LatoBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/device_scan"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/LatoRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/device_scan_description"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <com.jkl.testscan.scan.presentation.view.DefaultButton
                        style="@style/LatoBold"
                        android:layout_width="wrap_content"
                        android:layout_height="48sp"
                        android:layout_marginTop="16dp"
                        android:background="@mipmap/ic_button"
                        android:backgroundTint="#285FF6"
                        android:gravity="center"
                        android:text="@string/scan"
                        android:textColor="@color/withe"
                        android:textSize="16sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/withe"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@mipmap/ic_device_scan" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/LatoBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/check_for_viruses"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/LatoRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/check_for_viruses_description"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <com.jkl.testscan.scan.presentation.view.DefaultButton
                        style="@style/LatoBold"
                        android:layout_width="wrap_content"
                        android:layout_height="48sp"
                        android:layout_marginTop="16dp"
                        android:background="@mipmap/ic_button"
                        android:backgroundTint="#285FF6"
                        android:gravity="center"
                        android:text="@string/check"
                        android:textColor="@color/withe"
                        android:textSize="16sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/dashboardFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@drawable/dashboard_background"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:src="@mipmap/ic_dashboard_plane" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LatoBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/dashboard"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dashboardRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/dashboard_item" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>